--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 
   <!-- Sidebar / menú lateral -->
   <div class="sidebar" id="sidebar">
-    <img src="img/devo_logo.png" alt="Logo Devoteam" class="logo">
-    <button id="btn357" class="menu-button">Resumen de Ventas</button>
-    <button id="btn367" class="menu-button">Ventas</button>
+    <div class="sidebar-top">
+      <img src="img/devo_logo.png" alt="Logo Devoteam" class="logo">
+      <button id="btn357" class="menu-button">Resumen de Ventas</button>
+      <button id="btn367" class="menu-button">Ventas</button>
+    </div>
+    <a href="https://laura-diaz-dvt.github.io/portal-embed/" class="logout-btn">Cerrar sesión</a>
   </div>
 
   <!-- Contenido principal con iframe -->
